--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,28 @@
 @string{aps = {American Physical Society,}}
 
 
+@article{liaudat2023_3,
+	abbr = {liaudat2023_3.png},
+    author = {{Liaudat}, Tobías I. and {Mars}, Matthijs and {Price}, Matthew A. and {Pereyra}, Marcelo and {Betcke}, Marta M. and {McEwen}, Jason D.},
+    title = {{Scalable Bayesian uncertainty quantification with data-driven priors for radio interferometric imaging}},
+    journal = {arXiv e-prints},
+    keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Machine Learning},
+    year = 2023,
+    month = nov,
+    eid = {arXiv:2312.00125},
+	arxiv = {2312.00125},
+    pages = {arXiv:2312.00125},
+	code = {https://github.com/astro-informatics/QuantifAI},
+	archivePrefix = {arXiv},
+    eprint = {2312.00125},
+	pages = {arXiv:2312.00125},
+ 	primaryClass = {astro-ph.IM},
+ 	selected={true},
+	bibtex_show = {true},
+    adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv231200125L},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{mcewen2023,
 	abbr = {mcewen2023.png},
 	abstract = {{Proximal nested sampling was introduced recently to open up Bayesian model selection for high-dimensional problems such as computational imaging. The framework is suitable for models with a log-convex likelihood, which are ubiquitous in the imaging sciences. The purpose of this article is two-fold. First, we review proximal nested sampling in a pedagogical manner in an attempt to elucidate the framework for physical scientists. Second, we show how proximal nested sampling can be extended in an empirical Bayes setting to support data-driven priors, such as deep neural networks learned from training data.}},
