--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,11 +9,30 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{li2024,
+	abbr = {li2024.png},
+	title = {{Black-Hole-to-Halo Mass Relation From UNIONS Weak Lensing}},
+	abstract = {{This letter presents, for the first time, direct constraints on the black-hole-to-halo-mass relation using weak gravitational lensing measurements. We construct type I and type II Active Galactic Nuclei (AGNs) samples from the Sloan Digital Sky Survey (SDSS), with a mean redshift of 0.4 (0.1) for type I (type II) AGNs. This sample is cross-correlated with weak lensing shear from the Ultraviolet Near Infrared Northern Survey (UNIONS). We compute the excess surface mass density of the halos associated with 36, 181 AGNs from 94, 308, 561 lensed galaxies and fit the halo mass in bins of black- hole mass. We find that more massive AGNs reside in more massive halos. We see no evidence of dependence on AGN type or redshift in the black-hole-to-halo-mass relationship when systematic errors in the measured black-hole masses are included. Our results are consistent with previous measurements for non-AGN galaxies. At a fixed black-hole mass, our weak-lensing halo masses are consistent with galaxy rotation curves, but significantly lower than galaxy clustering measurements. Finally, our results are broadly consistent with state-of-the-art hydro-dynamical cosmological simulations, providing a new constraint for black-hole masses in simulations.}},
+	author = {Qinxun Li and Martin Kilbinger and Wentao Luo and Kai Wang and Huiyuan Wang and Anna Wittje and Hendrik Hildebrandt and Ludovic van Waerbeke and Michael J. Hudson and Samuel Farrens and {Liaudat}, Tobías I. and Huiling Liu and Ziwen Zhang and Qingqing Wang and Elisa Russier and Axel Guinot and Lucie Baumont and Fabian Hervas Peters and Thomas de Boer and Jiaqi Wang},
+	journal = {arXiv e-prints},
+    year = 2024,
+    month = feb,
+    eid = {arXiv:2402.10740},
+	arxiv = {2402.10740},
+    pages = {arXiv:2402.10740},
+	archivePrefix = {arXiv},
+    eprint = {2402.10740},
+ 	primaryClass = {astro-ph.GA},
+	bibtex_show = {true},
+    adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240210740L},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{liaudat2023_3,
 	abbr = {liaudat2023_3.png},
     author = {{Liaudat}, Tobías I. and {Mars}, Matthijs and {Price}, Matthew A. and {Pereyra}, Marcelo and {Betcke}, Marta M. and {McEwen}, Jason D.},
     title = {{Scalable Bayesian uncertainty quantification with data-driven priors for radio interferometric imaging}},
+	abstract = {{Next-generation radio interferometers like the Square Kilometer Array have the potential to unlock scientific discoveries thanks to their unprecedented angular resolution and sensitivity. One key to unlocking their potential resides in handling the deluge and complexity of incoming data. This challenge requires building radio interferometric imaging methods that can cope with the massive data sizes and provide high-quality image reconstructions with uncertainty quantification (UQ). This work proposes a method coined QuantifAI to address UQ in radio-interferometric imaging with data-driven (learned) priors for high-dimensional settings. Our model, rooted in the Bayesian framework, uses a physically motivated model for the likelihood. The model exploits a data-driven convex prior, which can encode complex information learned implicitly from simulations and guarantee the log-concavity of the posterior. We leverage probability concentration phenomena of high-dimensional log-concave posteriors that let us obtain information about the posterior, avoiding MCMC sampling techniques. We rely on convex optimisation methods to compute the MAP estimation, which is known to be faster and better scale with dimension than MCMC sampling strategies. Our method allows us to compute local credible intervals, i.e., Bayesian error bars, and perform hypothesis testing of structure on the reconstructed image. In addition, we propose a novel blazing-fast method to compute pixel-wise uncertainties at different scales. We demonstrate our method by reconstructing radio-interferometric images in a simulated setting and carrying out fast and scalable UQ, which we validate with MCMC sampling. Our method shows an improved image quality and more meaningful uncertainties than the benchmark method based on a sparsity-promoting prior.}},
     journal = {arXiv e-prints},
     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Machine Learning},
     year = 2023,
