add new posters and talks

--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,6 +4,22 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+@article{2024_05_cosmo21_quantifai_TL,
+  title = {Cosmo21 conference, 2024, Chania, Greece},
+  journal = {Scalable Bayesian uncertainty quantification with learned convex regularisers for radio interferometric imaging},
+  year = {2024},
+  month = {May},
+  slides = {https://drive.google.com/file/d/14-Am_e4s1FGcZemeignK92cINoC9SDZm/view?usp=share_link},
+  }
+
+@article{2024_05_cosmo21_proxnest_TL,
+  title = {Cosmo21 conference, 2024, Chania, Greece},
+  journal = {Proximal Nested Sampling with Data-Driven AI Priors},
+  year = {2024},
+  month = {May},
+  poster = {https://drive.google.com/file/d/1TdhhQewp7IrRl_PMgRQbGVFXZskOzBii/view?usp=share_link},
+  }
+
 @article{2023_11_workshop_poster_TL,
   title = {Co-conception : capteurs hybrides et algorithmes pour des systèmes innovants, 2023, IHP, Paris, France},
   journal = {Point spread function wavefront recovery: phase retrieval with automatic differentiation},
