add whitney 2024 paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,25 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{whitney2024,
+       author = {{Whitney}, Jessica and {Liaudat}, Tob{\'\i}as I. and {Price}, Matt and {Mars}, Matthijs and {McEwen}, Jason D.},
+        title = {{Using conditional GANs for convergence map reconstruction with uncertainties}},
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2024,
+        month = may,
+        abbr = {whitney2024.png},
+          eid = {arXiv:2406.15424},
+        pages = {arXiv:2406.15424},
+          doi = {10.48550/arXiv.2406.15424},
+archivePrefix = {arXiv},
+    bibtex_show = {true},
+	 	arxiv = {2406.15424},
+       eprint = {2406.15424},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240615424W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @article{euclid2024_5,
        author = {{Euclid Collaboration} and {Castander}, F.~J. and {Fosalba}, P. and {Stadel}, J. and {Potter}, D. and {Carretero}, J. and {Tallada-Cresp{\'\i}}, P. and {Pozzetti}, L. and {Bolzonella}, M. and {Mamon}, G.~A. and {Blot}, L. and {Hoffmann}, K. and {Huertas-Company}, M. and {Monaco}, P. and {Gonzalez}, E.~J. and {De Lucia}, G. and {Scarlata}, C. and {Breton}, M. -A. and {Linke}, L. and {Viglione}, C. and {Li}, S. -S. and {Zhai}, Z. and {Baghkhani}, Z. and {Pardede}, K. and {Neissner}, C. and {Teyssier}, R. and {Crocce}, M. and {Tutusaus}, I. and {Miller}, L. and {Congedo}, G. and {Biviano}, A. and {Hirschmann}, M. and {Pezzotta}, A. and {Aussel}, H. and {Hoekstra}, H. and {Kitching}, T. and {Percival}, W.~J. and {Guzzo}, L. and {Mellier}, Y. and {Oesch}, P.~A. and {Bowler}, R.~A.~A. and {Bruton}, S. and {Allevato}, V. and {Gonzalez-Perez}, V. and {Manera}, M. and {Avila}, S. and {Kov{\'a}cs}, A. and {Aghanim}, N. and {Altieri}, B. and {Amara}, A. and {Amendola}, L. and {Andreon}, S. and {Auricchio}, N. and {Baldi}, M. and {Balestra}, A. and {Bardelli}, S. and {Bender}, R. and {Bodendorf}, C. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Brinchmann}, J. and {Camera}, S. and {Capobianco}, V. and {Carbone}, C. and {Casas}, S. and {Castellano}, M. and {Cavuoti}, S. and {Cimatti}, A. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Corcione}, L. and {Courbin}, F. and {Courtois}, H.~M. and {Da Silva}, A. and {Degaudenzi}, H. and {Di Giorgio}, A.~M. and {Dinis}, J. and {Douspis}, M. and {Dubath}, F. and {Duncan}, C.~A.~J. and {Dupac}, X. and {Dusini}, S. and {Ealet}, A. and {Farina}, M. and {Farrens}, S. and {Ferriol}, S. and {Fotopoulou}, S. and {Fourmanoit}, N. and {Frailis}, M. and {Franceschi}, E. and {Franzetti}, P. and {Galeotta}, S. and {Gillard}, W. and {Gillis}, B. and {Giocoli}, C. and {G{\'o}mez-Alvarez}, P. and {Granett}, B.~R. and {Grazian}, A. and {Grupp}, F. and {Haugan}, S.~V.~H. and {Holliman}, M.~S. and {Holmes}, W. and {Hook}, I. and {Hormuth}, F. and {Hornstrup}, A. and {Hudelot}, P. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kiessling}, A. and {Kilbinger}, M. and {Kohley}, R. and {Kubik}, B. and {K{\"u}mmel}, M. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lahav}, O. and {Laureijs}, R. and {Le Mignant}, D. and {Ligori}, S. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Maino}, D. and {Maiorano}, E. and {Mansutti}, O. and {Marggraf}, O. and {Markovic}, K. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Masters}, D.~C. and {Maurogordato}, S. and {McCracken}, H.~J. and {Medinaceli}, E. and {Mei}, S. and {Melchior}, M. and {Meneghetti}, M. and {Merlin}, E. and {Meylan}, G. and {Mohr}, J.~J. and {Moresco}, M. and {Moscardini}, L. and {Munari}, E. and {Nakajima}, R. and {Nichol}, R.~C. and {Niemi}, S. -M. and {Padilla}, C. and {Paech}, K. and {Paltani}, S. and {Pasian}, F. and {Peacock}, J.~A. and {Pedersen}, K. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Raison}, F. and {Rebolo}, R. and {Renzi}, A. and {Rhodes}, J. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Rosset}, C. and {Rossetti}, E. and {Saglia}, R. and {Sapone}, D. and {Schirmer}, M. and {Schneider}, P. and {Schrabback}, T. and {Scodeggio}, M. and {Secroun}, A. and {Seidel}, G. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Starck}, J. -L. and {Taylor}, A.~N. and {Teplitz}, H.~I. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tsyganov}, A. and {Valenziano}, L. and {Vassallo}, T. and {Veropalumbo}, A. and {Wang}, Y. and {Weller}, J. and {Zacchei}, A. and {Zamorani}, G. and {Zerbi}, F.~M. and {Zoubian}, J. and {Zucca}, E. and {Baccigalupi}, C. and {Bernardeau}, F. and {Boucaud}, A. and {Bozzo}, E. and {Burigana}, C. and {Calabrese}, M. and {Casenove}, P. and {Castignani}, G. and {Colodro-Conde}, C. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Fabbian}, G. and {Finelli}, F. and {Gracia-Carpio}, J. and {Ili{\'c}}, S. and {Liebing}, P. and {Marcin}, S. and {Martinelli}, M. and {Matthew}, S. and {Mauri}, N. and {P{\"o}ntinen}, M. and {Porciani}, C. and {Sakr}, Z. and {Scottez}, V. and {Sefusatti}, E. and {Steinwagner}, J. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Aubourg}, E. and {Balaguera-Antolinez}, A. and {Ballardini}, M. and {Bertacca}, D. and {Bethermin}, M. and {Blanchard}, A. and {B{\"o}hringer}, H. and {Borgani}, S. and {Bouvard}, T. and {Cabanac}, R. and {Calabro}, A. and {Camacho Quevedo}, B. and {Canas-Herrera}, G. and {Cappi}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Castro}, T. and {Chambers}, K.~C. and {Contarini}, S. and {Contini}, T. and {Cooray}, A.~R. and {Costanzi}, M. and {Cucciati}, O. and {Davini}, S. and {De Caro}, B. and {de la Torre}, S. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Diaz}, J.~J. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ezziati}, M. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Finoguenov}, A. and {Fontana}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Garc{\'\i}a-Bellido}, J. and {Gasparetto}, T. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gonzalez}, A.~H. and {Gozaliasl}, G. and {Hall}, A. and {Hartley}, W.~G. and {Hildebrandt}, H. and {Hjorth}, J. and {Holland}, A.~D. and {Ilbert}, O. and {Joudaki}, S. and {Jullo}, E. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Le Graet}, J. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Loureiro}, A. and {Macias-Perez}, J. and {Magliocchetti}, M. and {Mancini}, C. and {Mannucci}, F. and {Maoli}, R. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Migliaccio}, M. and {Miluzio}, M. and {Mora}, A. and {Moretti}, C. and {Morgante}, G. and {Nadathur}, S. and {Nicastro}, L. and {Walton}, Nicholas A. and {Oguri}, M. and {Patrizii}, L. and {Popa}, V. and {Pourtsidou}, A. and {Reimberg}, P. and {Risso}, I. and {Rocci}, P. -F. and {Rollins}, R.~P. and {Rusholme}, B. and {Sahl{\'e}n}, M. and {S{\'a}nchez}, A.~G. and {Schaye}, J. and {Schewtschenko}, J.~A. and {Schneider}, A. and {Schultheis}, M. and {Sereno}, M. and {Shankar}, F. and {Shulevski}, A. and {Silvestri}, A. and {Simon}, P. and {Spurio Mancini}, A. and {Stanford}, S.~A. and {Tanidis}, K. and {Tao}, C. and {Tessore}, N. and {Testera}, G. and {Tewes}, M. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valieri}, C. and {Valiviita}, J. and {Vergani}, D. and {Vernizzi}, F. and {Verza}, G. and {Vielzeuf}, P. and {Weaver}, J.~R. and {Zalesky}, L. and {Dimauro}, P. and {Duc}, P. -A. and {Fang}, Y. and {Ferguson}, A.~M.~N. and {Gutierrez}, C.~M. and {Kova\{{\v{c}}\}i{\'c}}, I. and {Kruk}, S. and {Le Brun}, A.~M.~C. and {Montoro}, A. and {Murray}, C. and {Pagano}, L. and {Paoletti}, D. and {Sarpa}, E. and {Viitanen}, A. and {Mart{\'\i}n-Fleitas}, J. and {Yung}, L.~Y.~A.},
