--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,26 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{euclid2024_6,
+       author = {{Euclid Collaboration} and {B{\"o}hringer}, H. and {Chon}, G. and {Cucciati}, O. and {Dannerbauer}, H. and {Bolzonella}, M. and {De Lucia}, G. and {Cappi}, A. and {Moscardini}, L. and {Giocoli}, C. and {Castignani}, G. and {Hatch}, N.~A. and {Andreon}, S. and {Ba{\~n}ados}, E. and {Ettori}, S. and {Fontanot}, F. and {Gully}, H. and {Hirschmann}, M. and {Maturi}, M. and {Mei}, S. and {Pozzetti}, L. and {Schlenker}, T. and {Spinelli}, M. and {Aghanim}, N. and {Altieri}, B. and {Auricchio}, N. and {Baccigalupi}, C. and {Baldi}, M. and {Bardelli}, S. and {Bodendorf}, C. and {Bonino}, D. and {Branchini}, E. and {Brescia}, M. and {Brinchmann}, J. and {Camera}, S. and {Capobianco}, V. and {Carbone}, C. and {Carretero}, J. and {Casas}, S. and {Castander}, F.~J. and {Castellano}, M. and {Cavuoti}, S. and {Cimatti}, A. and {Colodro-Conde}, C. and {Congedo}, G. and {Conselice}, C.~J. and {Conversi}, L. and {Copin}, Y. and {Courbin}, F. and {Courtois}, H.~M. and {Da Silva}, A. and {Degaudenzi}, H. and {Di Giorgio}, A.~M. and {Dinis}, J. and {Douspis}, M. and {Dubath}, F. and {Duncan}, C.~A.~J. and {Dupac}, X. and {Dusini}, S. and {Farina}, M. and {Farrens}, S. and {Faustini}, F. and {Fosalba}, P. and {Frailis}, M. and {Franceschi}, E. and {Fumana}, M. and {Galeotta}, S. and {Gillis}, B. and {G{\'o}mez-Alvarez}, P. and {Grazian}, A. and {Grupp}, F. and {Haugan}, S.~V.~H. and {Holmes}, W. and {Hormuth}, F. and {Hornstrup}, A. and {Hudelot}, P. and {Jahnke}, K. and {Jhabvala}, M. and {Joachimi}, B. and {Keih{\"a}nen}, E. and {Kermiche}, S. and {Kiessling}, A. and {Kilbinger}, M. and {Kubik}, B. and {K{\"u}mmel}, M. and {Kunz}, M. and {Kurki-Suonio}, H. and {Ligori}, S. and {Lilje}, P.~B. and {Lindholm}, V. and {Lloro}, I. and {Mainetti}, G. and {Maino}, D. and {Maiorano}, E. and {Mansutti}, O. and {Marggraf}, O. and {Markovic}, K. and {Martinelli}, M. and {Martinet}, N. and {Marulli}, F. and {Massey}, R. and {Maurogordato}, S. and {Medinaceli}, E. and {Mellier}, Y. and {Meneghetti}, M. and {Meylan}, G. and {Moresco}, M. and {Niemi}, S. -M. and {Padilla}, C. and {Paltani}, S. and {Pasian}, F. and {Pedersen}, K. and {Pettorino}, V. and {Pires}, S. and {Polenta}, G. and {Poncet}, M. and {Popa}, L.~A. and {Raison}, F. and {Rebolo}, R. and {Renzi}, A. and {Rhodes}, J. and {Riccio}, G. and {Romelli}, E. and {Roncarelli}, M. and {Rossetti}, E. and {Saglia}, R. and {Sakr}, Z. and {S{\'a}nchez}, A.~G. and {Sapone}, D. and {Sartoris}, B. and {Schirmer}, M. and {Schneider}, P. and {Scodeggio}, M. and {Secroun}, A. and {Seidel}, G. and {Serrano}, S. and {Sirignano}, C. and {Sirri}, G. and {Stanco}, L. and {Steinwagner}, J. and {Tallada-Cresp{\'\i}}, P. and {Taylor}, A.~N. and {Tereno}, I. and {Toledo-Moreo}, R. and {Torradeflot}, F. and {Tutusaus}, I. and {Vassallo}, T. and {Verdoes Kleijn}, G. and {Veropalumbo}, A. and {Wang}, Y. and {Weller}, J. and {Zamorani}, G. and {Zucca}, E. and {Bozzo}, E. and {Burigana}, C. and {Calabrese}, M. and {Di Ferdinando}, D. and {Escartin Vigo}, J.~A. and {Finelli}, F. and {Gracia-Carpio}, J. and {Matthew}, S. and {Mauri}, N. and {P{\"o}ntinen}, M. and {Porciani}, C. and {Scottez}, V. and {Tenti}, M. and {Viel}, M. and {Wiesmann}, M. and {Akrami}, Y. and {Allevato}, V. and {Alvi}, S. and {Anselmi}, S. and {Archidiacono}, M. and {Atrio-Barandela}, F. and {Balaguera-Antolinez}, A. and {Ballardini}, M. and {Blanchard}, A. and {Blot}, L. and {Borgani}, S. and {Bruton}, S. and {Cabanac}, R. and {Calabro}, A. and {Caro}, F. and {Carvalho}, C.~S. and {Castro}, T. and {Chambers}, K.~C. and {Contarini}, S. and {Cooray}, A.~R. and {Costanzi}, M. and {De Caro}, B. and {Desprez}, G. and {D{\'\i}az-S{\'a}nchez}, A. and {Di Domizio}, S. and {Dole}, H. and {Escoffier}, S. and {Ferrari}, A.~G. and {Ferreira}, P.~G. and {Ferrero}, I. and {Fontana}, A. and {Fornari}, F. and {Gabarra}, L. and {Ganga}, K. and {Garc{\'\i}a-Bellido}, J. and {Gasparetto}, T. and {Gautard}, V. and {Gaztanaga}, E. and {Giacomini}, F. and {Gianotti}, F. and {Gonzalez}, A.~H. and {Gozaliasl}, G. and {Gutierrez}, C.~M. and {Hall}, A. and {Hartley}, W.~G. and {Hildebrandt}, H. and {Hjorth}, J. and {Jimenez Mu{\~n}oz}, A. and {Kajava}, J.~J.~E. and {Kansal}, V. and {Karagiannis}, D. and {Kirkpatrick}, C.~C. and {Legrand}, L. and {Lesgourgues}, J. and {Liaudat}, T.~I. and {Loureiro}, A. and {Macias-Perez}, J. and {Maggio}, G. and {Magliocchetti}, M. and {Mancini}, C. and {Mannucci}, F. and {Maoli}, R. and {Martins}, C.~J.~A.~P. and {Maurin}, L. and {Metcalf}, R.~B. and {Miluzio}, M. and {Monaco}, P. and {Montoro}, A. and {Mora}, A. and {Moretti}, C. and {Morgante}, G. and {Walton}, Nicholas A. and {Patrizii}, L. and {Popa}, V. and {Potter}, D. and {Risso}, I. and {Rocci}, P. -F. and {Sahl{\'e}n}, M. and {Schneider}, A. and {Schultheis}, M. and {Sereno}, M. and {Shankar}, F. and {Simon}, P. and {Spurio Mancini}, A. and {Stadel}, J. and {Stanford}, S.~A. and {Tanidis}, K. and {Tao}, C. and {Testera}, G. and {Teyssier}, R. and {Toft}, S. and {Tosi}, S. and {Troja}, A. and {Tucci}, M. and {Valieri}, C. and {Valiviita}, J. and {Vergani}, D. and {Verza}, G.},
+        title = {{Euclid preparation. Exploring the properties of proto-clusters in the Simulated Euclid Wide Survey}},
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2024,
+        month = jul,
+         abbr = {euclid_proto_clusters.png},
+          eid = {arXiv:2407.19919},
+        pages = {arXiv:2407.19919},
+          doi = {10.48550/arXiv.2407.19919},
+archivePrefix = {arXiv},
+    bibtex_show = {true},
+	 	arxiv = {2407.19919},
+       eprint = {2407.19919},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240719919E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{whitney2024,
        author = {{Whitney}, Jessica and {Liaudat}, Tob{\'\i}as I. and {Price}, Matt and {Mars}, Matthijs and {McEwen}, Jason D.},
         title = {{Using conditional GANs for convergence map reconstruction with uncertainties}},
