add new euclid paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,27 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{euclid2024_13,
+		abbr = {euclid2024_2409.07528v1.png},
+ 		bibtex_show = {true},
+      title="{Euclid preparation. Deep learning true galaxy morphologies for weak lensing shear bias calibration}", 
+      author={Euclid Collaboration and B. Csizi and T. Schrabback and S. Grandis and H. Hoekstra and H. Jansen and L. Linke and G. Congedo and A. N. Taylor and A. Amara and S. Andreon and C. Baccigalupi and M. Baldi and S. Bardelli and P. Battaglia and R. Bender and C. Bodendorf and D. Bonino and E. Branchini and M. Brescia and J. Brinchmann and S. Camera and V. Capobianco and C. Carbone and J. Carretero and S. Casas and F. J. Castander and M. Castellano and G. Castignani and S. Cavuoti and A. Cimatti and C. Colodro-Conde and C. J. Conselice and L. Conversi and Y. Copin and F. Courbin and H. M. Courtois and M. Cropper and A. Da Silva and H. Degaudenzi and G. De Lucia and J. Dinis and M. Douspis and F. Dubath and X. Dupac and S. Dusini and M. Farina and S. Farrens and F. Faustini and S. Ferriol and S. Fotopoulou and M. Frailis and E. Franceschi and S. Galeotta and B. Gillis and C. Giocoli and A. Grazian and F. Grupp and L. Guzzo and S. V. H. Haugan and W. Holmes and I. Hook and F. Hormuth and A. Hornstrup and P. Hudelot and S. Ilić and K. Jahnke and M. Jhabvala and B. Joachimi and E. Keihänen and S. Kermiche and A. Kiessling and M. Kilbinger and B. Kubik and K. Kuijken and M. Kümmel and M. Kunz and H. Kurki-Suonio and S. Ligori and P. B. Lilje and V. Lindholm and I. Lloro and D. Maino and E. Maiorano and O. Mansutti and S. Marcin and O. Marggraf and K. Markovic and M. Martinelli and N. Martinet and F. Marulli and R. Massey and E. Medinaceli and S. Mei and M. Melchior and Y. Mellier and M. Meneghetti and G. Meylan and M. Moresco and L. Moscardini and S. -M. Niemi and C. Padilla and S. Paltani and F. Pasian and K. Pedersen and V. Pettorino and S. Pires and G. Polenta and M. Poncet and L. A. Popa and F. Raison and A. Renzi and J. Rhodes and G. Riccio and E. Romelli and M. Roncarelli and E. Rossetti and R. Saglia and Z. Sakr and A. G. Sánchez and B. Sartoris and P. Schneider and A. Secroun and G. Seidel and S. Serrano and C. Sirignano and G. Sirri and L. Stanco and J. Steinwagner and P. Tallada-Crespí and D. Tavagnacco and H. I. Teplitz and I. Tereno and R. Toledo-Moreo and F. Torradeflot and I. Tutusaus and E. A. Valentijn and L. Valenziano and T. Vassallo and G. Verdoes Kleijn and A. Veropalumbo and Y. Wang and J. Weller and G. Zamorani and E. Zucca and A. Biviano and M. Bolzonella and E. Bozzo and C. Burigana and M. Calabrese and D. Di Ferdinando and J. A. Escartin Vigo and R. Farinelli and J. Gracia-Carpio and S. Matthew and N. Mauri and A. Pezzotta and M. Pöntinen and V. Scottez and M. Tenti and M. Viel and M. Wiesmann and Y. Akrami and V. Allevato and S. Anselmi and M. Archidiacono and F. Atrio-Barandela and M. Ballardini and A. Blanchard and L. Blot and S. Borgani and S. Bruton and R. Cabanac and A. Calabro and G. Cañas-Herrera and A. Cappi and F. Caro and C. S. Carvalho and T. Castro and K. C. Chambers and S. Contarini and A. R. Cooray and G. Desprez and A. Díaz-Sánchez and J. J. Diaz and S. Di Domizio and H. Dole and S. Escoffier and A. G. Ferrari and P. G. Ferreira and I. Ferrero and A. Finoguenov and A. Fontana and F. Fornari and L. Gabarra and K. Ganga and J. García-Bellido and T. Gasparetto and E. Gaztanaga and F. Giacomini and F. Gianotti and G. Gozaliasl and C. M. Gutierrez and A. Hall and H. Hildebrandt and J. Hjorth and A. Jimenez Muñoz and S. Joudaki and J. J. E. Kajava and V. Kansal and D. Karagiannis and C. C. Kirkpatrick and A. M. C. Le Brun and J. Le Graet and L. Legrand and J. Lesgourgues and T. I. Liaudat and A. Loureiro and J. Macias-Perez and G. Maggio and M. Magliocchetti and C. Mancini and F. Mannucci and R. Maoli and J. Martín-Fleitas and C. J. A. P. Martins and L. Maurin and R. B. Metcalf and M. Miluzio and P. Monaco and A. Montoro and A. Mora and C. Moretti and G. Morgante and Nicholas A. Walton and L. Pagano and L. Patrizii and V. Popa and D. Potter and I. Risso and P. -F. Rocci and M. Sahlén and E. Sarpa and A. Schneider and M. Sereno and P. Simon and A. Spurio Mancini and J. Stadel and K. Tanidis and C. Tao and N. Tessore and G. Testera and R. Teyssier and S. Toft and S. Tosi and A. Troja and M. Tucci and C. Valieri and J. Valiviita and D. Vergani and G. Verza and P. Vielzeuf},
+      abstract = "{To date, galaxy image simulations for weak lensing surveys usually approximate the light profiles of all galaxies as a single or double Sérsic profile, neglecting the influence of galaxy substructures and morphologies deviating from such a simplified parametric characterization. While this approximation may be sufficient for previous data sets, the stringent cosmic shear calibration requirements and the high quality of the data in the upcoming Euclid survey demand a consideration of the effects that realistic galaxy substructures have on shear measurement biases. Here we present a novel deep learning-based method to create such simulated galaxies directly from HST data. We first build and validate a convolutional neural network based on the wavelet scattering transform to learn noise-free representations independent of the point-spread function of HST galaxy images that can be injected into simulations of images from Euclid's optical instrument VIS without introducing noise correlations during PSF convolution or shearing. Then, we demonstrate the generation of new galaxy images by sampling from the model randomly and conditionally. Next, we quantify the cosmic shear bias from complex galaxy shapes in Euclid-like simulations by comparing the shear measurement biases between a sample of model objects and their best-fit double-Sérsic counterparts. Using the KSB shape measurement algorithm, we find a multiplicative bias difference between these branches with realistic morphologies and parametric profiles on the order of 6.9×10−3 for a realistic magnitude-Sérsic index distribution. Moreover, we find clear detection bias differences between full image scenes simulated with parametric and realistic galaxies, leading to a bias difference of 4.0×10−3 independent of the shape measurement method. This makes it relevant for stage IV weak lensing surveys such as Euclid.}",
+	  year={2024},
+	  journal = {arXiv e-prints},
+		month = sep,
+      eprint={2409.07528},
+		eid = {arXiv:2409.07528},
+		pages = {arXiv:2409.07528},
+archivePrefix = {arXiv},
+	eprint = {2409.07528},
+	arxiv = {2409.07528},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.CO},
+      url={https://arxiv.org/abs/2409.07528}, 
+}
+
+
 @ARTICLE{euclid2024_12,
 		abbr = {euclid2024_2409.03524v1.png},
  		bibtex_show = {true},
