--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,51 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{cherif2024,
+	abbr = {cherif2024.png},
+	bibtex_show = {true},
+       author = {{Cherif}, Mostafa and {Liaudat}, Tobías I. and {Kern}, Jonathan and {Kervazo}, Christophe and {Bobin}, J{\'e}r{\^o}me},
+        title = "{Uncertainty quantification for fast reconstruction methods using augmented equivariant bootstrap: Application to radio interferometry}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Machine Learning},
+         year = 2024,
+        month = oct,
+          eid = {arXiv:2410.23178},
+        pages = {arXiv:2410.23178},
+          doi = {10.48550/arXiv.2410.23178},
+archivePrefix = {arXiv},
+       eprint = {2410.23178},
+	   arxiv = {2410.23178},
+	   url={https://arxiv.org/abs/2410.23178},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241023178C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{whitney2024b,
+	abbr = {whitney2024b.png},
+	bibtex_show = {true},
+       author = {{Whitney}, Jessica J. and {Liaudat}, Tobías I. and {Price}, Matthew A. and {Mars}, Matthijs and {McEwen}, Jason D.},
+        title = "{Generative modelling for mass-mapping with fast uncertainty quantification}",
+		abstract = "{Understanding the nature of dark matter in the Universe is an important goal of modern cosmology. A key method for probing this distribution is via weak gravitational lensing mass-mapping - a challenging ill-posed inverse problem where one infers the convergence field from observed shear measurements. Upcoming stage IV surveys, such as those made by the Vera C. Rubin Observatory and Euclid satellite, will provide a greater quantity and precision of data for lensing analyses, necessitating high-fidelity mass-mapping methods that are computationally efficient and that also provide uncertainties for integration into downstream cosmological analyses. In this work we introduce MMGAN, a novel mass-mapping method based on a regularised conditional generative adversarial network (GAN) framework, which generates approximate posterior samples of the convergence field given shear data. We adopt Wasserstein GANs to improve training stability and apply regularisation techniques to overcome mode collapse, issues that otherwise are particularly acute for conditional GANs. We train and validate our model on a mock COSMOS-style dataset before applying it to true COSMOS survey data. Our approach significantly outperforms the Kaiser-Squires technique and achieves similar reconstruction fidelity as alternative state-of-the-art deep learning approaches. Notably, while alternative approaches for generating samples from a learned posterior are slow (e.g. requiring ~10 GPU minutes per posterior sample), MMGAN can produce a high-quality convergence sample in less than a second.}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2024,
+        month = oct,
+          eid = {arXiv:2410.24197},
+        pages = {arXiv:2410.24197},
+archivePrefix = {arXiv},
+       eprint = {2410.24197},
+	   arxiv = {2410.24197},
+	   code = {https://github.com/astro-informatics/rcGAN},
+	   url={https://arxiv.org/abs/2410.24197},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241024197W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{euclid2024_13,
 		abbr = {euclid2024_2409.07528v1.png},
  		bibtex_show = {true},
@@ -126,6 +171,7 @@ archivePrefix = {arXiv},
        eprint = {2409.01877},
 		arxiv = {2409.01877},
  primaryClass = {astro-ph.CO},
+		  doi = {10.1051/0004-6361/202451230},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240901877E},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -310,6 +356,7 @@ archivePrefix = {arXiv},
 	archivePrefix = {arXiv},
        eprint = {2405.13491},
  	primaryClass = {astro-ph.CO},
+		  doi = {10.1051/0004-6361/202450810},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240513491E},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
