--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,13 +14,13 @@
 	bibtex_show = {true},
        author = {{Cherif}, Mostafa and {Liaudat}, Tobías I. and {Kern}, Jonathan and {Kervazo}, Christophe and {Bobin}, J{\'e}r{\^o}me},
         title = "{Uncertainty quantification for fast reconstruction methods using augmented equivariant bootstrap: Application to radio interferometry}",
-      journal = {arXiv e-prints},
+		abstract = "{The advent of next-generation radio interferometers like the Square Kilometer Array promises to revolutionise our radio astronomy observational capabilities. The unprecedented volume of data these devices generate requires fast and accurate image reconstruction algorithms to solve the ill-posed radio interferometric imaging problem. Most state-of-the-art reconstruction methods lack trustworthy and scalable uncertainty quantification, which is critical for the rigorous scientific interpretation of radio observations. We propose an unsupervised technique based on a conformalized version of a radio-augmented equivariant bootstrapping method, which allows us to quantify uncertainties for fast reconstruction methods. Noticeably, we rely on reconstructions from ultra-fast unrolled algorithms. The proposed method brings more reliable uncertainty estimations to our problem than existing alternatives.}",
+	  journal = {arXiv e-prints},
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Machine Learning},
          year = 2024,
         month = oct,
           eid = {arXiv:2410.23178},
         pages = {arXiv:2410.23178},
-          doi = {10.48550/arXiv.2410.23178},
 archivePrefix = {arXiv},
        eprint = {2410.23178},
 	   arxiv = {2410.23178},
