--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,6 +4,21 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+@article{2024_10_cea_meeting_TL,
+  title = {Seminaire Mission Numérique du CEA, 2024, Grenoble, France},
+  journal = {Scientific AI for the physical sciences},
+  year = {2024},
+  month = {Nov},
+  }
+
+@article{2024_10_numpex_workshop_TL,
+  title = {NumPEx workshop Exa-DI, 2024, Paris, France},
+  journal = {Towards fast and scalable uncertainty quantification for scientific imaging},
+  year = {2024},
+  month = {Oct},
+  slides = {https://drive.google.com/file/d/1kdSimQyFA-WS4TvZpPKoHU6trCbYZE_i/view?usp=share_link},
+  }
+
 @article{2024_05_cosmo21_quantifai_TL,
   title = {Cosmo21 conference, 2024, Chania, Greece},
   journal = {Scalable Bayesian uncertainty quantification with learned convex regularisers for radio interferometric imaging},
@@ -18,6 +33,13 @@
   year = {2024},
   month = {May},
   poster = {https://drive.google.com/file/d/1TdhhQewp7IrRl_PMgRQbGVFXZskOzBii/view?usp=share_link},
+  }
+
+@article{2024_03_DAG_seminar_TL,
+  title = {Data Analysis Group seminar, 2024, Saclay, France},
+  journal = {Scalable Bayesian uncertainty quantification with learned convex regularisers for radio interferometric imaging},
+  year = {2024},
+  month = {Mar},
   }
 
 @article{2023_11_workshop_poster_TL,
