--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,27 @@
 
 @string{aps = {American Physical Society,}}
 
+@ARTICLE{khorashadizadeh2024,
+		abbr = {khorashadizadeh2024.png},
+		bibtex_show = {true},
+       author = {{Khorashadizadeh}, AmirEhsan and {Liaudat}, Tobías I. and {Liu}, Tianlin and {McEwen}, Jason D. and {Dokmani{\'c}}, Ivan},
+        title = "{LoFi: Scalable Local Image Reconstruction with Implicit Neural Representation}",
+		abstract = "{Neural fields or implicit neural representations (INRs) have attracted significant attention in machine learning and signal processing due to their efficient continuous representation of images and 3D volumes. In this work, we build on INRs and introduce a coordinate-based local processing framework for solving imaging inverse problems, termed LoFi (Local Field). Unlike conventional methods for image reconstruction, LoFi processes local information at each coordinate separately by multi-layer perceptrons (MLPs), recovering the object at that specific coordinate. Similar to INRs, LoFi can recover images at any continuous coordinate, enabling image reconstruction at multiple resolutions. With comparable or better performance than standard CNNs for image reconstruction, LoFi achieves excellent generalization to out-of-distribution data and memory usage almost independent of image resolution. Remarkably, training on 1024x1024 images requires just 3GB of memory -- over 20 times less than the memory typically needed by standard CNNs. Additionally, LoFi's local design allows it to train on extremely small datasets with less than 10 samples, without overfitting or the need for regularization or early stopping. Finally, we use LoFi as a denoising prior in a plug-and-play framework for solving general inverse problems to benefit from its continuous image representation and strong generalization. Although trained on low-resolution images, LoFi can be used as a low-dimensional prior to solve inverse problems at any resolution. We validate our framework across a variety of imaging modalities, from low-dose computed tomography to radio interferometric imaging.}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Computer Vision and Pattern Recognition, Computer Science - Machine Learning},
+         year = 2024,
+        month = nov,
+          eid = {arXiv:2411.04995},
+        pages = {arXiv:2411.04995},
+          doi = {10.48550/arXiv.2411.04995},
+archivePrefix = {arXiv},
+       eprint = {2411.04995},
+	   arxiv = {2411.04995},
+ primaryClass = {cs.CV},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv241104995K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{cherif2024,
 	abbr = {cherif2024.png},
 	bibtex_show = {true},
