add neurips poster

--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,6 +4,22 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+@article{2024_12_NeurIPS_TL,
+  title = {NeurIPS conference, Machine Learning and the physical sciences workshop,  2024, Vancouver, Canada},
+  journal = {Uncertainty quantification for fast reconstruction methods using augmented equivariant bootstrap: Application to radio interferometry},
+  year = {2024},
+  month = {Dec},
+  poster = {https://drive.google.com/file/d/13pyjoOc5FDaNBac5GCx2Jpp0M7o9Rw0d/view?usp=share_link},
+  }
+
+@article{2024_11_InTheArt_TL,
+  title = {InTheArt seminar, 2024, Saclay, France},
+  journal = {Towards fast and scalable uncertainty quantification for scientific imaging},
+  year = {2024},
+  month = {Nov},
+  slides = {https://drive.google.com/file/d/1HWgkKyyCrO_8wb-ui0hpw67_RbskL5j3/view?usp=share_link},
+  }
+
 @article{2024_10_cea_meeting_TL,
   title = {Seminaire Mission Numérique du CEA, 2024, Grenoble, France},
   journal = {Scientific AI for the physical sciences},
