--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,8 +4,17 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+@article{2025_01_BASP_TL,
+  title = {BASP Frontiers conference, 2025, Villars-sur-Ollon, Switzerland},
+  journal = {Uncertainty quantification for fast reconstruction methods using augmented equivariant bootstrap: Application to radio interferometry},
+  year = {2025},
+  month = {Jan},
+  poster = {https://drive.google.com/file/d/15BJ93Wa7p8m7uzo5mszXKIyMVGUquq7K/view?usp=share_link},
+  }
+
+
 @article{2024_12_NeurIPS_TL,
-  title = {NeurIPS conference, Machine Learning and the physical sciences workshop,  2024, Vancouver, Canada},
+  title = {NeurIPS conference, Machine Learning and the physical sciences workshop, 2024, Vancouver, Canada},
   journal = {Uncertainty quantification for fast reconstruction methods using augmented equivariant bootstrap: Application to radio interferometry},
   year = {2024},
   month = {Dec},
