--- a/_bibliography/talks_posters.bib
+++ b/_bibliography/talks_posters.bib
@@ -4,6 +4,14 @@
 %% Options [title, journal, year, month, html, slides, poster, project]
 %% 
 
+@article{2025_01_DeepCosmoStatDays_TL,
+  title = {Deep CosmoStat Days, 2025, Saclay, France},
+  journal = {Towards fast and scalable uncertainty quantification for scientific imaging: Application to radio interferometry},
+  year = {2025},
+  month = {Jan},
+  slides = {https://drive.google.com/file/d/1D-Dp7LRqUljaqWx4vaHMFARvMfkjnkQ-/view?usp=share_link},
+  }
+
 @article{2025_01_BASP_TL,
   title = {BASP Frontiers conference, 2025, Villars-sur-Ollon, Switzerland},
   journal = {Uncertainty quantification for fast reconstruction methods using augmented equivariant bootstrap: Application to radio interferometry},
